--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,4 +1,10 @@
-black==24.2.0
-flake8==7.0.0
-pytest==8.0.2
-pytest-cov==4.1.0 
+black==25.1.0
+click==8.1.8
+flake8==7.1.2
+mccabe==0.7.0
+mypy-extensions==1.0.0
+packaging==24.2
+pathspec==0.12.1
+platformdirs==4.3.7
+pycodestyle==2.12.1
+pyflakes==3.2.0
