chore: remove coverage threshold and apply autopep8 formatting

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -56,7 +56,7 @@ jobs:
     - name: Run tests with coverage
       run: |
         cd ${{ matrix.recipe }}
-        pytest --cov=${{ matrix.recipe }} --cov-report=xml --cov-report=term-missing --cov-fail-under=70 tests/
+        pytest --cov=${{ matrix.recipe }} --cov-report=xml --cov-report=term-missing tests/
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
