--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,7 +32,7 @@ jobs:
     - name: Install global dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 black pytest pytest-cov
+        python -m pip install -r requirements-dev.txt
     
     - name: Install recipe dependencies
       run: |
@@ -56,7 +56,7 @@ jobs:
     - name: Run tests with coverage
       run: |
         cd ${{ matrix.recipe }}
-        pytest --cov=${{ matrix.recipe }} --cov-report=xml --cov-report=term-missing --cov-fail-under=70 tests/
+        python -m pytest --cov=${{ matrix.recipe }} --cov-report=xml --cov-report=term-missing tests/
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
